Fix Page Module UI & Bugs (#492)
* Page Module: Image Cluster

* Fixes missing image URL and updates "change" prop to not required.

* Page Module: Generic Hero

* Update max-width for content, it was set way too small for practical use.

* Page Module: Image Gallery

* Add margin/padding to component

* Page Module: Linked Page with Summary

* Add a generic component for this, as it was missing.

* Page Module: Image Cluster

* Fix url issue - original update broke the manifesto page.

* Page Module: Linked Page Summary

* Fix mobile width

* Page Module: Linked Page with Summary

* Fix lint errors

--- a/client/src/components/GenericHero/styles.module.css
+++ b/client/src/components/GenericHero/styles.module.css
@@ -183,7 +183,7 @@
     & h1,
     & h3,
     & p {
-        max-width: 30vw;
+        max-width: 60vw;
 
         @media (--mq-m) {
             max-width: 50%;
