--- a/client/src/components/ImageGallery/styles.module.css
+++ b/client/src/components/ImageGallery/styles.module.css
@@ -1,1 +1,9 @@
 /* Image Gallery Styles */
+
+.container {
+    margin: 2rem 0 0;
+}
+
+.image {
+    padding-bottom: 2%;
+}
